--- a/pom.xml
+++ b/pom.xml
@@ -115,15 +115,13 @@
 
 	</build>
 <distributionManagement>
-<snapshotRepository>
+  <snapshotRepository>
     <id>snapshots</id>
-	<name>SNAPSHOT</name>
-    <url>http://52.53.160.146:8080/nexus/content/repositories/snapshots/</url>
+    <url>http://52.53.151.51:8080/nexus-2.14.5-02/content/repositories/snapshots/</url>
   </snapshotRepository>
   <repository>
     <id>releases</id>
-	<name>RELEASES</name>
-    <url>http://52.53.160.146:8080/nexus/content/repositories/releases/</url>
+    <url>http://52.53.151.51:8080/nexus-2.14.5-02/content/repositories/releases/</url>
   </repository>
 </distributionManagement>
 </project>
